fix(frontend): add more contrast to cards
Especially, when viewing through a screenshare the cards
tend to blur with the background.

--- a/frontend/app/styles/pages/subscriptions/own.scss
+++ b/frontend/app/styles/pages/subscriptions/own.scss
@@ -6,6 +6,8 @@
   &__card {
     @extend .uk-card;
     @extend .uk-card-default;
+
+    border: 1px solid #eee;
   }
 
   &__header {
