--- a/frontend/app/styles/pages/subscriptions/reload.scss
+++ b/frontend/app/styles/pages/subscriptions/reload.scss
@@ -8,6 +8,8 @@
   &__item > div {
     @extend .uk-card;
     @extend .uk-card-default;
+
+    border: 1px solid #eee;
   }
 
   &__header {
